[gd_scene load_steps=6 format=2]

[ext_resource path="res://bigscenes/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://gui/menulabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://christmas lights.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="mainmenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version" type="Control" parent="CanvasLayer/Control"]
margin_top = 550.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version" type="RichTextLabel" parent="CanvasLayer/Control/version"]
margin_left = 50.0
margin_right = 1024.0
margin_bottom = 60.0
size_flags_horizontal = 11
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "version 0.0.1"
text = "version 0.0.1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 69.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="label" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 73.0
margin_right = 1024.0
margin_bottom = 247.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="menulabel" parent="CanvasLayer/Control/VBoxContainer/label" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
key = "TITLE"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 251.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 1024.0
margin_bottom = 48.0
focus_neighbour_top = NodePath("../button3")
focus_neighbour_bottom = NodePath("../button2")
focus_next = NodePath("../button2")
focus_previous = NodePath("../button3")
size_flags_vertical = 11
text = "MENU_PLAY"
font_size = 40.0

[node name="button2" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 68.0
margin_right = 1024.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../button")
focus_neighbour_bottom = NodePath("../button3")
focus_next = NodePath("../button3")
focus_previous = NodePath("../button")
size_flags_vertical = 3
text = "MENU_OPTIONS"
font_size = 40.0

[node name="button3" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 136.0
margin_right = 1024.0
margin_bottom = 184.0
focus_neighbour_top = NodePath("../button2")
focus_neighbour_bottom = NodePath("../button")
focus_next = NodePath("../button")
focus_previous = NodePath("../button2")
size_flags_vertical = 3
text = "MENU_QUIT"
font_size = 40.0

[node name="Control2" type="Control" parent="CanvasLayer/Control/VBoxContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 1024.0
margin_bottom = 349.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/VBoxContainer/button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/VBoxContainer/button3" to="." method="_on_quit_pressed"]
